{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 186,
  "lineage": "9ea88c8f-05e2-357a-3a88-6f852d657e0d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:network-acl/acl-03a04fbb9245c5518",
            "default_network_acl_id": "acl-03a04fbb9245c5518",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03a04fbb9245c5518",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "132172135366",
            "subnet_ids": [
              "subnet-0613cb6e3b6e6d6cd",
              "subnet-062472382d0f1b47b",
              "subnet-063faed57107a5608",
              "subnet-0b591293ed9cf4849",
              "subnet-0bd088889d28560a0",
              "subnet-0c20afe7e9dbab7a7",
              "subnet-0c7a5a4ea84fe6e1d",
              "subnet-0c962ac9c02a252c0",
              "subnet-0d45429d407c13c1b"
            ],
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-default",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-default",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:route-table/rtb-01a4cc95593c5a248",
            "default_route_table_id": "rtb-01a4cc95593c5a248",
            "id": "rtb-01a4cc95593c5a248",
            "owner_id": "132172135366",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-default",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-default",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:security-group/sg-0e76c93ce3abbf968",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e76c93ce3abbf968",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "132172135366",
            "revoke_rules_on_delete": false,
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-default",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-default",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6c4381bb92822a2",
            "arn": "arn:aws:ec2:us-east-1:132172135366:elastic-ip/eipalloc-0f6c4381bb92822a2",
            "domain": "vpc",
            "id": "eipalloc-0f6c4381bb92822a2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-208-170-245.compute-1.amazonaws.com",
            "public_ip": "54.208.170.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:internet-gateway/igw-0e12132f553eec596",
            "id": "igw-0e12132f553eec596",
            "owner_id": "132172135366",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6c4381bb92822a2",
            "association_id": "eipassoc-0d33d061c73a553eb",
            "connectivity_type": "public",
            "id": "nat-02ba1734d32be9db5",
            "network_interface_id": "eni-0509cbf460aa9a9f9",
            "private_ip": "10.0.48.199",
            "public_ip": "54.208.170.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c962ac9c02a252c0",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0837e18c08f521efa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02ba1734d32be9db5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0837e18c08f521efa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e12132f553eec596",
            "id": "r-rtb-0ee4fc6916a90536e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee4fc6916a90536e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:route-table/rtb-024c7cc71fbe7a6b9",
            "id": "rtb-024c7cc71fbe7a6b9",
            "owner_id": "132172135366",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:route-table/rtb-0837e18c08f521efa",
            "id": "rtb-0837e18c08f521efa",
            "owner_id": "132172135366",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:route-table/rtb-0ee4fc6916a90536e",
            "id": "rtb-0ee4fc6916a90536e",
            "owner_id": "132172135366",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d574c2c5f256f0e7",
            "route_table_id": "rtb-024c7cc71fbe7a6b9",
            "subnet_id": "subnet-0c20afe7e9dbab7a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d02bf10dd4345f72",
            "route_table_id": "rtb-024c7cc71fbe7a6b9",
            "subnet_id": "subnet-062472382d0f1b47b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08728fd649c6e8126",
            "route_table_id": "rtb-024c7cc71fbe7a6b9",
            "subnet_id": "subnet-0bd088889d28560a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02804810449d3f076",
            "route_table_id": "rtb-0837e18c08f521efa",
            "subnet_id": "subnet-0613cb6e3b6e6d6cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fec93f2007d39b3",
            "route_table_id": "rtb-0837e18c08f521efa",
            "subnet_id": "subnet-063faed57107a5608"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0811db3877191db79",
            "route_table_id": "rtb-0837e18c08f521efa",
            "subnet_id": "subnet-0d45429d407c13c1b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e4e125753ade1c",
            "route_table_id": "rtb-0ee4fc6916a90536e",
            "subnet_id": "subnet-0c962ac9c02a252c0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0918ceaae34354287",
            "route_table_id": "rtb-0ee4fc6916a90536e",
            "subnet_id": "subnet-0b591293ed9cf4849"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08aa2a0319e089b67",
            "route_table_id": "rtb-0ee4fc6916a90536e",
            "subnet_id": "subnet-0c7a5a4ea84fe6e1d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-0c20afe7e9dbab7a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c20afe7e9dbab7a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-062472382d0f1b47b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.53.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062472382d0f1b47b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra-us-east-1b",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra-us-east-1b",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-0bd088889d28560a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.54.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd088889d28560a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra-us-east-1c",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-intra-us-east-1c",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-0613cb6e3b6e6d6cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0613cb6e3b6e6d6cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-063faed57107a5608",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063faed57107a5608",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private-us-east-1b",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private-us-east-1b",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-0d45429d407c13c1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d45429d407c13c1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private-us-east-1c",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-private-us-east-1c",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-0c962ac9c02a252c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c962ac9c02a252c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public-us-east-1a",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-0b591293ed9cf4849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b591293ed9cf4849",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public-us-east-1b",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public-us-east-1b",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:subnet/subnet-0c7a5a4ea84fe6e1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7a5a4ea84fe6e1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132172135366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public-us-east-1c",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster-public-us-east-1c",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f80c4d99348cf6e9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:132172135366:vpc/vpc-0f80c4d99348cf6e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a04fbb9245c5518",
            "default_route_table_id": "rtb-01a4cc95593c5a248",
            "default_security_group_id": "sg-0e76c93ce3abbf968",
            "dhcp_options_id": "dopt-80ef09e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f80c4d99348cf6e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a4cc95593c5a248",
            "owner_id": "132172135366",
            "tags": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster",
              "kubernetes.io/cluster/demo-cluster": "shared"
            },
            "tags_all": {
              "DevtedsOrg": "Devteds Courses",
              "DevtedsStack": "demo-cluster",
              "DevtedsStackName": "vpc",
              "Name": "demo-cluster",
              "kubernetes.io/cluster/demo-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}